setup google fonts poppins

--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Session</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <!-- This is header section -->
+    <header>
+        <nav>
+            <h3>Influencer products</h3>
+
+            <ul>
+                 <li><a href="">Home</a></li>
+                 <li><a href="">Products</a></li>
+                 <li><a href="">Sign Up</a></li>
+                 <li><a href="">Login</a></li>  
+                 <img src="images/akar-icons_search.svg" alt="">
+                 <img src="images/clarity_shopping-cart-outline-badged.svg" alt="">  
+            </ul>
+        </nav>
+
+        <!-- This is the banner section -->
+        <div class="banner">
+            <div class="banner-container">
+                
+            </div>
+
+        </div>
+
+
+    </header>
+
+    <!-- This is main section -->
+    <main>
+
+    </main>
+    <!-- This is the footer section -->
+    <footer>
+
+    </footer>
     
 </body>
 </html>
