header section added

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
         <!-- This is the banner section -->
         <div class="banner">
             <div class="banner-container">
-                
+                <h1 class="banner-title">Start your Journey as <br>
+                    Influencer</h1>
+                    <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                    <button class="btn-primary">Preebook now</button>
             </div>
-
-        </div>
+                <img src="images/main-camera.png" alt="">      
+            </div>
 
 
     </header>
