header responsive done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- This is header section -->
     <header>
         <nav>
-            <h3>Influencer products</h3>
+            <h3 class="section">Influencer products</h3>
 
             <ul>
                  <li><a href="">Home</a></li>
