--- a/index.html
+++ b/index.html
@@ -32,12 +32,24 @@
             </div>
                 <img src="images/main-camera.png" alt="">      
             </div>
-
-
     </header>
+    <!-- This is the end of the header section -->
 
     <!-- This is main section -->
     <main>
+        <!-- This is the sponsor section -->
+        <section class="sponsor">
+            <div class="sponsors-img-container">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+            </div> 
+        </section>
+        <!-- This is the end of the sponsor section -->
 
     </main>
     <!-- This is the footer section -->
